testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment1.errors.txt
a.js(8,16): error TS2739: Type '{ c: boolean; }' is missing the following properties from type 'Foo': a, b


==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {boolean} a
     * @property {boolean} b
     */
    
    /** @type {Foo} */
    export default { c: false };
                   ~~~~~~~~~~~~
!!! error TS2739: Type '{ c: boolean; }' is missing the following properties from type 'Foo': a, b
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    